--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -125,6 +125,9 @@
 }
 
 @media screen and (max-width: 590px) {
+    .logo-img {
+        max-width: 130px;
+    }
     .theme-space {
         padding: 50px 0;
     }
@@ -142,6 +145,9 @@
     }
     .project-title {
         font-size: 28px;
+    }
+    .modal-check-list{
+        flex-direction: column;
     }
 }
 @media screen and (max-width: 480px) {
